# conan_cgt

./: CMakeLists.txt
include/: cgt.h
src/: cgt.cpp
